little things for accessibility

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul class="contacts">
                 <li><p class="lighter bolt">Location</p><p>Kemerovo, Ru</p></li>
                 <li><p class="lighter bolt">Phone</p><p>+7 923 491 1612</p></li>
-                <li><p class="lighter bolt">Email</p><p><a href="mailto:evtatdevelop@gmail.com">evtatdevelop@gmail.com</a></p></li>
+                <li><a href="mailto:evtatdevelop@gmail.com"><p class="lighter bolt">Email</p><p class="name-link">evtatdevelop@gmail.com</p></a></li>
             </ul>
         </header>
 
