Add html, styles, js  for SKILLS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/rest.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
@@ -57,12 +57,12 @@
         <section class="section expertise">
             <div class="section-header">
                 <h2 class="lighter upper bolt">expertise</h2>
-                <p>Like a good swiss knife .</p>
+                <p>Like a good swiss army knife.</p>
             </div>
             <ul class="expertise-list">
                 <li>
                     <h3 class="lighter upper bolt">
-                        <span class="colorize upper bolt expertise-num numbers">01</span> 
+                        <span class="colorize upper bolt list-num numbers">01</span> 
                         HTML 5
                     </h3>
                     <p>Cras ornare tristique elit lorem ipsum dolor sit amet, consectetuer 
@@ -71,7 +71,7 @@
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
-                        <span class="colorize upper bolt expertise-num numbers">02</span> 
+                        <span class="colorize upper bolt list-num numbers">02</span> 
                         Advanced CSS
                     </h3>
                     <p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, 
@@ -80,7 +80,7 @@
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
-                        <span class="colorize upper bolt expertise-num numbers">03</span> 
+                        <span class="colorize upper bolt list-num numbers">03</span> 
                         JavaScript
                     </h3>
                     <p>Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit 
@@ -89,7 +89,7 @@
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
-                        <span class="colorize upper bolt expertise-num numbers">04</span> 
+                        <span class="colorize upper bolt list-num numbers">04</span> 
                         jQuery
                     </h3>
                     <p>Morbi in sem quis dui placerat ornare. Ut aliquam sollicitudin leo. Pellentesque
@@ -98,7 +98,7 @@
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
-                        <span class="colorize upper bolt expertise-num numbers">05</span> 
+                        <span class="colorize upper bolt list-num numbers">05</span> 
                         React
                     </h3>
                     <p>Morbi in sem quis dui placerat ornare. Ut aliquam sollicitudin leo. Pellentesque
@@ -107,7 +107,7 @@
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
-                        <span class="colorize upper bolt expertise-num numbers">06</span> 
+                        <span class="colorize upper bolt list-num numbers">06</span> 
                         Vue.js
                     </h3>
                     <p>Morbi in sem quis dui placerat ornare. Ut aliquam sollicitudin leo. Pellentesque
@@ -116,7 +116,7 @@
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
-                        <span class="colorize upper bolt expertise-num numbers">07</span> 
+                        <span class="colorize upper bolt list-num numbers">07</span> 
                         TypeScript
                     </h3>
                     <p>Phasellus ultrices nulla quis nibh. Fusce lobortis lorem. Quisque a lectus. 
@@ -125,8 +125,17 @@
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
-                        <span class="colorize upper bolt expertise-num numbers">08</span> 
+                        <span class="colorize upper bolt list-num numbers">08</span> 
                         Object-oriented PHP
+                    </h3>
+                    <p>Cras ornare tristique elit lorem ipsum dolor sit amet, consectetuer adipiscing 
+                        elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, 
+                        aliquet vel, dapibus id.</p>
+                </li>
+                <li>
+                    <h3 class="lighter upper bolt">
+                        <span class="colorize upper bolt list-num numbers">09</span> 
+                        SQL
                     </h3>
                     <p>Cras ornare tristique elit lorem ipsum dolor sit amet, consectetuer adipiscing 
                         elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, 
@@ -140,7 +149,58 @@
                 <h2 class="lighter upper bolt">skills</h2>
                 <p>Lorem, ipsum dolor.</p>
             </div>
-            
+            <ul class="skills-list">
+                <li data-level="60">
+                    <h3 class="lighter upper bolt">
+                        <span class="colorize upper bolt list-num numbers">
+                            <span class='levelNum'>50</span>
+                            <span class="smaller">%</span>
+                        </span> 
+                        CSS3 Animation
+                    </h3>
+                    <div class="progress-bar"><div class="progress"></div></div>
+                </li>
+                <li data-level="75">
+                    <h3 class="lighter upper bolt">
+                        <span class="colorize upper bolt list-num numbers">
+                            <span class='levelNum'>50</span>
+                            <span class="smaller">%</span>
+                        </span> 
+                        GIT
+                    </h3>
+                    <div class="progress-bar"><div class="progress"></div></div>
+                </li>
+                <li data-level="75">
+                    <h3 class="lighter upper bolt">
+                        <span class="colorize upper bolt list-num numbers">
+                            <span class='levelNum'>50</span>
+                            <span class="smaller">%</span>
+                        </span> 
+                        Photoshop
+                    </h3>
+                    <div class="progress-bar"><div class="progress"></div></div>
+                </li>
+                <li data-level="60">
+                    <h3 class="lighter upper bolt">
+                        <span class="colorize upper bolt list-num numbers">
+                            <span class='levelNum'>50</span>
+                            <span class="smaller">%</span>
+                        </span> 
+                        SASS / LESS
+                    </h3>
+                    <div class="progress-bar"><div class="progress"></div></div>
+                </li>
+                <li data-level="45">
+                    <h3 class="lighter upper bolt">
+                        <span class="colorize upper bolt list-num numbers">
+                            <span class='levelNum'>50</span>
+                            <span class="smaller">%</span>
+                        </span> 
+                        WebPack
+                    </h3>
+                    <div class="progress-bar"><div class="progress"></div></div>
+                </li>
+            </ul>
         </section>
         
         <section class="section experiance">
