--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id='app'>
         <header class="header">
             <div class="header-box box-avatar">
-                <img src="./img/portfolioFace3.jpg" alt="Photo: Evgeny Tatarenko" class="avatar header-element" width="160" height="160">
+                <img src="./img/portfolioFace3.jpg" alt="Photo: Evgeny Tatarenko" class="avatar header-element" width="160" >
             </div>
                 
             <div class="header-box box-first-name">
