responsive behaviour inside of education && experiance

--- a/index.html
+++ b/index.html
@@ -157,15 +157,6 @@
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
-                        <span class="colorize upper bolt list-num numbers">07</span> 
-                        TypeScript
-                    </h3>
-                    <p>Phasellus ultrices nulla quis nibh. Fusce lobortis lorem. Quisque a lectus. 
-                        Donec consectetuer ligula vulputate sem tristique cursus. Nam nulla quam, 
-                        gravida non, sodales sit amet, nisi.</p>
-                </li>
-                <li>
-                    <h3 class="lighter upper bolt">
                         <span class="colorize upper bolt list-num numbers">08</span> 
                         Object-oriented PHP
                     </h3>
@@ -182,7 +173,6 @@
                         elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, 
                         aliquet vel, dapibus id.</p>
                 </li>
-                <li></li>
             </ul>    
         </section>
         
@@ -252,6 +242,17 @@
                     </h3>
                     <div class="progress-bar"><div class="progress"></div></div>
                 </li>
+                <li data-level="76">
+                    <h3 class="lighter upper bolt">
+                        <span class="colorize upper bolt list-num numbers">
+                            <span class='levelNum'></span>
+                            <span class="smaller">%</span>
+                        </span> 
+                        TypeScript
+                    </h3>
+                    <div class="progress-bar"><div class="progress"></div></div>
+                </li>
+                <li></li>
             </ul>
         </section>
         
@@ -262,22 +263,28 @@
             </div>
             <ul class="experiance-list">
                 <li>
-                    <p class="small poor dates">2013 - Present</p>
-                    <h3 class="lighter upper bolt">
-                        Siberian Coal Energy Company
-                    </h3>
-                    <p class="small lighter">Full Stack Web Developer</p>
-                    <p class="small poor">Kemerovo</p>
+                    <div class="experiance-info">
+                        <p class="small poor dates">2013 - Present</p>
+                        <h3 class="lighter upper bolt">
+                            Siberian Coal Energy Company
+                        </h3>
+                        <p class="small lighter">Full Stack Web Developer</p>
+                        <p class="small poor">Kemerovo</p>  
+                    </div>
+
                     <p>Brought forth excellent time management and multitasking skills.
                         Work well independently and on a team to solve problems.
                         Serve as a friendly, hardworking, and punctual employee.
                     </p>
                 </li>
                 <li>
-                    <p class="small poor dates">2000 - 2013</p>
-                    <h3 class="lighter upper bolt">
-                        Freelance Web Developer
-                    </h3>
+                    <div class="experiance-info">
+                        <p class="small poor dates">2000 - 2013</p>
+                        <h3 class="lighter upper bolt">
+                            Freelance Web Developer
+                        </h3>                        
+                    </div>
+
                     <p>Maintained an eagerness to add to my knowledge and skills.
                         Organized and prioritized work to complete assignments in a timely, efficient manner.                     
                     </p>
@@ -292,23 +299,29 @@
             </div>
             <ul class="education-list">
                 <li>
-                    <p class="small poor dates">2002 - 2004</p>
-                    <h3 class="lighter upper bolt">
-                        Tomsk State University of Control Systems and Radioelectronics
-                    </h3>
-                    <p class="small lighter">Incomplete higher education</p>
-                    <p class="small poor">Tomsk</p>
+                    <div class="experiance-info">
+                        <p class="small poor dates">2002 - 2004</p>
+                        <h3 class="lighter upper bolt">
+                            Tomsk State University of Control Systems and Radioelectronics
+                        </h3>
+                        <p class="small lighter">Incomplete higher education</p>
+                        <p class="small poor">Tomsk</p>                        
+                    </div>
+
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                         Neque qui doloribus harum quia, inventore minus dignissimos voluptatibus, corrupti delectus quod deserunt labore iste voluptatum eius tempora? Numquam mollitia debitis ea?
                     </p>
                 </li>
                 <li>
-                    <p class="small poor dates">1993 - 2000</p>
-                    <h3 class="lighter upper bolt">
-                        Tomsk Polytechnic University
-                    </h3>
-                    <p class="small lighter">Bachelor's Degree</p>
-                    <p class="small poor">Tomsk</p>
+                    <div class="experiance-info">
+                        <p class="small poor dates">1993 - 2000</p>
+                        <h3 class="lighter upper bolt">
+                            Tomsk Polytechnic University
+                        </h3>
+                        <p class="small lighter">Bachelor's Degree</p>
+                        <p class="small poor">Tomsk</p>                        
+                    </div>
+
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                         Neque qui doloribus harum quia, inventore minus dignissimos voluptatibus, corrupti delectus quod deserunt labore iste voluptatum eius tempora? Numquam mollitia debitis ea?
                     </p>
