Content of expertise

--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
                         <span class="colorize upper bolt list-num numbers">01</span> 
                         HTML 5
                     </h3>
-                    <p>Cras ornare tristique elit lorem ipsum dolor sit amet, consectetuer 
-                        adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec 
-                        urna. In nisi neque, aliquet vel, dapibus id.</p>
+                    <p>Using the new version of HTML along with CSS 3 and ES.Next allows for some really cool front-end stuff. Semantic layout makes the code understandable for working in teams.</p>
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
@@ -116,62 +114,49 @@
                         Advanced CSS
                     </h3>
                     <p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, 
-                        euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper 
-                        magna. Ut aliquam sollicitudin leo.</p>
+                        euismod vel, velit. Pellentesque egestas sem.</p>
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
                         <span class="colorize upper bolt list-num numbers">03</span> 
                         JavaScript
                     </h3>
-                    <p>Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit 
-                        amet orci. Aenean dignissim pellentesque felis. Vivamus vestibulum nulla cras
-                        ornare tristique elit nec ante.</p>
+                    <p>As for me, JS is the most important programming language at the moment. I use native javascript in my projects to gain new features and improve my skills.</p>
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
                         <span class="colorize upper bolt list-num numbers">04</span> 
                         jQuery
                     </h3>
-                    <p>Morbi in sem quis dui placerat ornare. Ut aliquam sollicitudin leo. Pellentesque
-                        odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras ante. 
-                        Vivamus vestibulum nulla nec ante.</p>
+                    <p>It can be called "My First Love in Interface Programming". And now it is a great tool for quickly creating friendly WEB-interfaces. Old friends and old wine are the best.</p>
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
                         <span class="colorize upper bolt list-num numbers">05</span> 
                         React
                     </h3>
-                    <p>Morbi in sem quis dui placerat ornare. Ut aliquam sollicitudin leo. Pellentesque
-                        odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras ante. 
-                        Vivamus vestibulum nulla nec ante.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae incidunt iure quis inventore animi, sint ducimus accusantium eos fuga natus?</p>
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
                         <span class="colorize upper bolt list-num numbers">06</span> 
                         Vue.js
                     </h3>
-                    <p>Morbi in sem quis dui placerat ornare. Ut aliquam sollicitudin leo. Pellentesque
-                        odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras ante. 
-                        Vivamus vestibulum nulla nec ante.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis fuga libero nihil nesciunt necessitatibus enim distinctio est sed deserunt dignissimos?</p>
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
                         <span class="colorize upper bolt list-num numbers">08</span> 
                         Object-oriented PHP
                     </h3>
-                    <p>Cras ornare tristique elit lorem ipsum dolor sit amet, consectetuer adipiscing 
-                        elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, 
-                        aliquet vel, dapibus id.</p>
+                    <p>Many modern and not so much sites use it as their main engine. Many powerful frameworks are written on it. Any web developer should know and be able to use this tool.</p>
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
                         <span class="colorize upper bolt list-num numbers">09</span> 
                         SQL
                     </h3>
-                    <p>Cras ornare tristique elit lorem ipsum dolor sit amet, consectetuer adipiscing 
-                        elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, 
-                        aliquet vel, dapibus id.</p>
+                    <p>I use a combination of mySQL and PHP in my projects. In corporate projects we work with Oracle Database. Thus, SQL is an important part of my daily work.</p>
                 </li>
             </ul>    
         </section>
@@ -259,7 +244,7 @@
         <section class="section experiance">
             <div class="section-header">
                 <h2 class="lighter upper bolt">experiance</h2>
-                <p>Lorem, ipsum dolor.</p>
+                <p>Only two opposites.</p>
             </div>
             <ul class="experiance-list">
                 <li>
@@ -295,7 +280,7 @@
         <section class="section education">
             <div class="section-header">
                 <h2 class="lighter upper bolt">education</h2>
-                <p>Lorem, ipsum dolor.</p>
+                <p>Taught to learn.</p>
             </div>
             <ul class="education-list">
                 <li>
@@ -308,8 +293,7 @@
                         <p class="small poor">Tomsk</p>                        
                     </div>
 
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Neque qui doloribus harum quia, inventore minus dignissimos voluptatibus, corrupti delectus quod deserunt labore iste voluptatum eius tempora? Numquam mollitia debitis ea?
+                    <p>Received extensive basic knowledge in the design and operation of IT systems. Learned the need to write competent code supported by a development team.
                     </p>
                 </li>
                 <li>
@@ -322,8 +306,7 @@
                         <p class="small poor">Tomsk</p>                        
                     </div>
 
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Neque qui doloribus harum quia, inventore minus dignissimos voluptatibus, corrupti delectus quod deserunt labore iste voluptatum eius tempora? Numquam mollitia debitis ea?
+                    <p>Got vast experience in working with a large amount of information and finding the necessary knowledge. The most valuable acquisition was the self-study skill.
                     </p>
                 </li>
             </ul>
