Need to add REACT && VUE.JS descriptions

--- a/index.html
+++ b/index.html
@@ -106,15 +106,14 @@
                         <span class="colorize upper bolt list-num numbers">01</span> 
                         HTML 5
                     </h3>
-                    <p>Using the new version of HTML along with CSS 3 and ES.Next allows for some really cool front-end stuff. Semantic layout makes the code understandable for working in teams.</p>
+                    <p>Using the new version of HTML along with CSS3 and JS allows for some really cool front-end stuff. Semantic markup is happiness for the perfectionist.</p>
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
                         <span class="colorize upper bolt list-num numbers">02</span> 
                         Advanced CSS
                     </h3>
-                    <p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, 
-                        euismod vel, velit. Pellentesque egestas sem.</p>
+                    <p>Pseudo-classes, Gradients, Transitions, Animation, Transform, Responsiveness, flexbox, grid in CSS are an important part of my designs.</p>
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
