Add some responsive features for extra wide screens

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <img src="./img/portfolioFace3.jpg" alt="Photo: Evgeny Tatarenko" class="avatar header-element" width="160" >
                 </div>
             </div>
-            <div class="resp-desc-box ">
+            <div class="resp-desc-box resp-desc-right">
                 <div class="resp-desc-info">
                     <div class="resp-desc-name">
                         <div class="header-box box-first-name">
