Add section portfolio first

--- a/index.html
+++ b/index.html
@@ -310,13 +310,18 @@
                 </li>
             </ul>
         </section>
-        
+
         <section class="section portfolio">
             <div class="section-header">
                <h2 class="lighter upper bolt">portfolio</h2>
                <p>Lorem, ipsum dolor.</p>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, minima atque totam possimus debitis fugit saepe illo nesciunt harum magni aliquid velit dolorem reiciendis temporibus illum ad dolore dolor mollitia corrupti expedita ipsum dolores hic. Quos, consequatur, illum officiis ducimus alias ipsam voluptates inventore, tenetur sit reiciendis quisquam explicabo quo.</p>
+            <ul class="portfolio__gallery">
+                <li style="background-image: url('./img/gallery/1.jpg');"><a href="#"><img src="./img/gallery/1.jpg" alt=""></a></li>
+                <li style="background-image: url('./img/gallery/2.jpg');"><a href="#"><img src="./img/gallery/1.jpg" alt=""></a></li>
+                <li style="background-image: url('./img/gallery/3.jpg');"><a href="#"><img src="./img/gallery/1.jpg" alt=""></a></li>
+                <li style="background-image: url('./img/gallery/4.jpg');"><a href="#"><img src="./img/gallery/1.jpg" alt=""></a></li>
+            </ul>
         </section>
         
         <footer class="section footer">
