the animation appearance of the description in the portfolio section

--- a/index.html
+++ b/index.html
@@ -317,10 +317,46 @@
                <p>Lorem, ipsum dolor.</p>
             </div>
             <ul class="portfolio__gallery">
-                <li style="background-image: url('./img/gallery/1.jpg');"><a href="#"><img src="./img/gallery/1.jpg" alt=""></a></li>
-                <li style="background-image: url('./img/gallery/2.jpg');"><a href="#"><img src="./img/gallery/1.jpg" alt=""></a></li>
-                <li style="background-image: url('./img/gallery/3.jpg');"><a href="#"><img src="./img/gallery/1.jpg" alt=""></a></li>
-                <li style="background-image: url('./img/gallery/4.jpg');"><a href="#"><img src="./img/gallery/1.jpg" alt=""></a></li>
+                <li style="background-image: url('./img/gallery/1.jpg');">
+                    <a href="#">
+                        <img src="./img/gallery/1.jpg" alt="">
+                    </a>
+                    <div class="portfolio__intro">
+                        <h3 class="upper bolt">Lorem, ipsum dolor.</h3>
+                        <div class="underline"></div> 
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, fugiat.</p>
+                    </div>
+                </li>
+                <li style="background-image: url('./img/gallery/2.jpg');">
+                    <a href="#">
+                        <img src="./img/gallery/1.jpg" alt="">
+                    </a>
+                    <div class="portfolio__intro">
+                        <h3 class="upper bolt">Lorem, ipsum dolor.</h3>
+                        <div class="underline"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, fugiat.</p>
+                    </div>
+                </li>
+                <li style="background-image: url('./img/gallery/3.jpg');">
+                    <a href="#">
+                        <img src="./img/gallery/1.jpg" alt="">
+                    </a>
+                    <div class="portfolio__intro">
+                        <h3 class="upper bolt">Lorem, ipsum dolor.</h3>
+                        <div class="underline"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, fugiat.</p>
+                    </div>
+                </li>
+                <li style="background-image: url('./img/gallery/4.jpg');">
+                    <a href="#">
+                        <img src="./img/gallery/1.jpg" alt="">
+                    </a>
+                    <div class="portfolio__intro">
+                        <h3 class="upper bolt">Lorem, ipsum dolor.</h3>
+                        <div class="underline"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, fugiat.</p>
+                    </div>
+                </li>
             </ul>
         </section>
         
