Add Wheel shop portfolio

--- a/index.html
+++ b/index.html
@@ -317,13 +317,13 @@
                <p>Lorem, ipsum dolor.</p>
             </div>
             <ul class="portfolio__gallery">
-                <li style="background-image: url('./img/gallery/1.jpg');">
-                    <a href="#">
-                        <img src="./img/gallery/1.jpg" alt="">
+                <li style="background-image: url('./img/gallery/testTask.jpg');">
+                    <a href="http://webakcent.ru/portfolio/wheelshop/" target="_blank">
+                        <img src="./img/gallery/testTask.jpg" alt="">
                         <div class="portfolio__intro">
-                            <h3 class="upper bolt">Lorem, ipsum dolor.</h3>
+                            <h3 class="upper bolt">Wheel shop catalog page</h3>
                             <div class="underline"></div> 
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, fugiat.</p>
+                            <p>Responsive layout rearranges elements for different screen resolutions.</p>
                         </div>
                     </a>
                 </li>
