--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <ul class="portfolio__gallery">
                 <li style="background-image: url('./img/gallery/testTask.jpg');">
                     <a href="http://webakcent.ru/portfolio/wheelshop/" target="_blank">
-                        <img src="./img/gallery/testTask.jpg" alt="">
+                        <img src="./img/gallery/testTask.jpg" alt="wheelshop">
                         <div class="portfolio__intro">
                             <h3 class="upper bolt">Wheel shop catalog page</h3>
                             <div class="underline"></div> 
@@ -327,13 +327,13 @@
                         </div>
                     </a>
                 </li>
-                <li style="background-image: url('./img/gallery/2.jpg');">
-                    <a href="#">
-                        <img src="./img/gallery/1.jpg" alt="">
+                <li style="background-image: url('./img/gallery/simpleWeather.jpg');">
+                    <a href="http://webakcent.ru/weather/" target="_blank">
+                        <img src="./img/gallery/simpleWeather.jpg" alt="Simple Weather">
                         <div class="portfolio__intro">
-                            <h3 class="upper bolt">Lorem, ipsum dolor.</h3>
+                            <h3 class="upper bolt">Simple Weather Widget.</h3>
                             <div class="underline"></div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, fugiat.</p>
+                            <p>The React project uses some services. It shows general location data and current world weather.</p>
                         </div>
                     </a>
                 </li>
