Add app release

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <title>FrontEndDeveloper</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/rest.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -70,7 +69,7 @@
 
                     <li class="header-box">
                         <div class="header-element phone">
-                            <p class="lighter bolt">Phone</p><p class="numbers">+7 995 314 60 69</p>
+                            <p class="lighter bolt">Phone</p><p class="numbers">+7 923 491 16 12,<br>+66 99 483 49 62</p>
                         </div>
                         
                     </li>
@@ -134,7 +133,7 @@
                         <span class="colorize upper bolt list-num numbers">05</span> 
                         React
                     </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae incidunt iure quis inventore animi, sint ducimus accusantium eos fuga natus?</p>
+                    <p>Working with this modern framework makes development really interesting and professional.</p>
                 </li>
                 <li>
                     <h3 class="lighter upper bolt">
@@ -314,12 +313,12 @@
         <section class="section portfolio">
             <div class="section-header">
                <h2 class="lighter upper bolt">portfolio</h2>
-               <p>Lorem, ipsum dolor.</p>
+               <p>What happened recently.</p>
             </div>
             <ul class="portfolio__gallery">
                 <li style="background-image: url('./img/gallery/testTask.jpg');">
                     <a href="http://webakcent.ru/portfolio/wheelshop/" target="_blank">
-                        <img src="./img/gallery/testTask.jpg" alt="wheelshop">
+                        <img src="./img/gallery/testTask.jpg" alt="">
                         <div class="portfolio__intro">
                             <h3 class="upper bolt">Wheel shop catalog page</h3>
                             <div class="underline"></div> 
@@ -329,7 +328,7 @@
                 </li>
                 <li style="background-image: url('./img/gallery/simpleWeather.jpg');">
                     <a href="http://webakcent.ru/weather/" target="_blank">
-                        <img src="./img/gallery/simpleWeather.jpg" alt="Simple Weather">
+                        <img src="./img/gallery/simpleWeather.jpg" alt="">
                         <div class="portfolio__intro">
                             <h3 class="upper bolt">Simple Weather Widget.</h3>
                             <div class="underline"></div>
@@ -337,13 +336,13 @@
                         </div>
                     </a>
                 </li>
-                <li style="background-image: url('./img/gallery/3.jpg');">
-                    <a href="#">
+                <li style="background-image: url('./img/gallery/apprelease.jpg');">
+                    <a href="https://webakcent.ru/apprelease/">
                         <img src="./img/gallery/1.jpg" alt="">
                         <div class="portfolio__intro">
-                            <h3 class="upper bolt">Lorem, ipsum dolor.</h3>
+                            <h3 class="upper bolt">Automated request management system.</h3>
                             <div class="underline"></div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, fugiat.</p>
+                            <p>React version of the system for requesting access to corporate resources.</p>
                         </div>
                     </a>
                 </li>
@@ -363,7 +362,7 @@
         <footer class="section footer">
             <div class="section-header">
                 <h2 class="lighter upper bolt">Contacts</h2>
-                <p>Lorem, ipsum dolor.</p>
+                <p>Where to find me.</p>
             </div>
              
             <div class="resp-footer-box">
@@ -376,7 +375,7 @@
 
                     <li>
                         <div class="phone">
-                            <p class="lighter bolt">Phone</p><p class="numbers">+7 995 314 60 69</p>
+                            <p class="lighter bolt">Phone</p><p class="numbers">+7 995 314 60 69,<br>+66 99 483 49 62</p>
                         </div>
                     </li>
                     <li>
@@ -420,7 +419,6 @@
 
         </footer>
     </div>
-    <script src="https://kit.fontawesome.com/f8f40fa59d.js" crossorigin="anonymous"></script>
     <script src="./js/data.js"></script>
     <script src="./js/app.js"></script>
 </body>
